Digging into how acquisition time is stored in ND2 files.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180325 Metadata inventory analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180325 Metadata inventory analysis.ipynb
@@ -11,7 +11,8 @@
     "import holoviews as hv\n",
     "\n",
     "hv.extension(\"bokeh\")\n",
-    "from datetime import datetime, timedelta"
+    "from datetime import datetime, timedelta\n",
+    "import iso8601"
    ]
   },
   {
@@ -23,7 +24,9 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import inventory\n",
-    "from inventory import File"
+    "from inventory import File\n",
+    "import jdutil\n",
+    "import pytz"
    ]
   },
   {
@@ -36,151 +39,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Date correspondence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files = File.select().where(File.type == \"nd2\").order_by(File.size.desc()).limit(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md = files[0].metadata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(md[\"image_text_info\"][\"SLxImageTextInfo\"][\"TextInfoItem_5\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md[\"image_metadata\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md[\"acquisition_time\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import jdutil"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pytz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\"dTimeMSec\"] / (60 * 1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md[\"image_metadata_sequence\"][\"SLxPictureMetadata\"]  # ['dTimeStart']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dtimemsec = md[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\"dTimeMSec\"]\n",
-    "dtimemsec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dtimemsec_dt = timedelta(milliseconds=dtimemsec)\n",
-    "dtimemsec_dt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acquisition_time_nyc + dtimemsec_dt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dtimeabsolute = jdutil.jd_to_datetime(\n",
-    "    md[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\"dTimeAbsolute\"]\n",
-    ")\n",
-    "dtimeabsolute"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -190,12 +48,174 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Datetime interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The zero-point for `acquisition_times` is `acquisition_time_nyc`. The last time exposure was taken at about `acquisition_time_nyc + last_frame_dt`, which is a few seconds before the time of last write `mtime`. `dtimeabsolute` and `acquisition_time_nyc + dtimemsec` are the same; it's unclear why this particular time 10 minutes into data acquisition is special."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Scratch work"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "pytz.UTC.localize(dtimeabsolute).astimezone(nyc)"
+    "files = File.select().where(File.type == \"nd2\").order_by(File.size.desc()).limit(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "file = files[0]\n",
+    "md = file.metadata\n",
+    "mtime = nyc.localize(datetime.fromtimestamp(file.mtime))\n",
+    "ctime = nyc.localize(datetime.fromtimestamp(file.ctime))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "dtimemsec = timedelta(\n",
+    "    milliseconds=md[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\"dTimeMSec\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "dtimeabsolute = pytz.UTC.localize(\n",
+    "    jdutil.jd_to_datetime(\n",
+    "        md[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\"dTimeAbsolute\"]\n",
+    "    )\n",
+    ")\n",
+    "dtimeabsolute_nyc = dtimeabsolute.astimezone(nyc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "acquisition_time = pytz.UTC.localize(\n",
+    "    jdutil.jd_to_datetime(float(md[\"acquisition_time\"][\"variant\"][\"no_name\"][\"@value\"]))\n",
+    ")\n",
+    "acquisition_time_nyc = acquisition_time.astimezone(nyc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "last_frame_dt = timedelta(milliseconds=md[\"acquisition_times\"][-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "acquisition_time_nyc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "acquisition_time_nyc + dtimemsec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "dtimeabsolute_nyc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "acquisition_time_nyc + last_frame_dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "mtime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TIFF date finding"
    ]
   },
   {
@@ -204,7 +224,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = float(md[\"acquisition_time\"][\"variant\"][\"no_name\"][\"@value\"])"
+    "tiff_files = (\n",
+    "    File.select().where(File.type == \"tiff\").order_by(File.size.desc()).limit(10)\n",
+    ")"
    ]
   },
   {
@@ -213,8 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acquisition_time = jdutil.jd_to_datetime(x)\n",
-    "acquisition_time"
+    "tiff_files[0].path"
    ]
   },
   {
@@ -223,7 +244,220 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acquisition_time_nyc = pytz.UTC.localize(acquisition_time).astimezone(nyc)\n",
+    "delta_t = timedelta(\n",
+    "    milliseconds=float(\n",
+    "        tiff_files[0].metadata[\"image_description\"][\"OME\"][\"Image\"][\"Pixels\"][\"Plane\"][\n",
+    "            0\n",
+    "        ][\"@DeltaT\"]\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    iso8601.parse_date(\n",
+    "        tiff_files[0].metadata[\"image_description\"][\"OME\"][\"Image\"][\"AcquisitionDate\"]\n",
+    "    )\n",
+    "    + delta_t\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiff_files[0].metadata[\"image_description\"][\"OME\"][\"Image\"][\"Pixels\"][\"Plane\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tiff_files[0].metadata[\"image_description\"][\"OME\"][\"Image\"][\"AcquisitionDate\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`@DeltaT` in TIFF OME metadata is actually in msec (spec says seconds), corresponds to `acquisition_times` in ND2. TIFF OME `AcquisitionDate` (expressed as ISO 8601 string, 1 sec resolution) corresponds to `dTimeAbsolute` in ND2. For this file, dTimeMSec seems to be the first entry in `acquisition_times`. This disagrees with what I find above!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scratch work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_files = File.select().where(File.type == \"nd2\").order_by(File.size.desc()).limit(40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_file = nd2_files[21]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_file.metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\"dTimeAbsolute\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd2_file.metadata[\"acquisition_times\"][:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jds = float(\n",
+    "    nd2_file.metadata[\"acquisition_time\"][\"variant\"][\"no_name\"][\"@value\"]\n",
+    ") + np.array(nd2_file.metadata[\"acquisition_times\"]) / (1000 * 60 * 60 * 24)\n",
+    "jds2 = nd2_file.metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
+    "    \"dTimeAbsolute\"\n",
+    "] + np.array(nd2_file.metadata[\"acquisition_times\"]) / (1000 * 60 * 60 * 24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pytz.UTC.localize(\n",
+    "    jdutil.jd_to_datetime(\n",
+    "        nd2_file.metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
+    "            \"dTimeAbsolute\"\n",
+    "        ]\n",
+    "    )\n",
+    ").astimezone(nyc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array(nd2_file.metadata[\"acquisition_times\"]) / (1000 * 60 * 60 * 24)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pytz.UTC.localize(jdutil.jd_to_datetime(jds[53])).astimezone(nyc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pytz.UTC.localize(jdutil.jd_to_datetime(jds2[53])).astimezone(nyc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pytz.UTC.localize(\n",
+    "    jdutil.jd_to_datetime(\n",
+    "        nd2_file.metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
+    "            \"dTimeAbsolute\"\n",
+    "        ]\n",
+    "    )\n",
+    ").astimezone(nyc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pytz.UTC.localize(\n",
+    "    jdutil.jd_to_datetime(\n",
+    "        nd2_file.metadata[\"image_metadata_sequence\"][\"SLxPictureMetadata\"][\n",
+    "            \"dTimeAbsolute\"\n",
+    "        ]\n",
+    "    )\n",
+    ").astimezone(nyc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timedelta(milliseconds=nd2_file.metadata[\"acquisition_times\"][-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acquisition_time = pytz.UTC.localize(\n",
+    "    jdutil.jd_to_datetime(\n",
+    "        float(nd2_file.metadata[\"acquisition_time\"][\"variant\"][\"no_name\"][\"@value\"])\n",
+    "    )\n",
+    ")\n",
+    "acquisition_time_nyc = acquisition_time.astimezone(nyc)\n",
     "acquisition_time_nyc"
    ]
   },
@@ -233,8 +467,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mtime = nyc.localize(datetime.fromtimestamp(files[0].mtime))\n",
-    "ctime = nyc.localize(datetime.fromtimestamp(files[0].ctime))"
+    "atol = 0.1\n",
+    "np.where(\n",
+    "    np.logical_and(\n",
+    "        np.isclose(nd2_file.metadata[\"x_data\"], -3535.7, atol=atol),\n",
+    "        np.isclose(nd2_file.metadata[\"y_data\"], 124.2, atol=atol),\n",
+    "        np.isclose(nd2_file.metadata[\"z_data\"], 5463.74, atol=atol),\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correspondence"
    ]
   },
   {
@@ -243,7 +490,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = mtime - acquisition_time_nyc"
+    "nd2_files = File.select().where(File.type == \"nd2\").order_by(File.size.desc()).limit(40)\n",
+    "paths = []\n",
+    "data = []\n",
+    "for nd2_file in nd2_files.iterator():\n",
+    "    paths.append(nd2_file.path)\n",
+    "    data.append(\n",
+    "        (\n",
+    "            nd2_file.metadata[\"x_data\"],\n",
+    "            nd2_file.metadata[\"y_data\"],\n",
+    "            nd2_file.metadata[\"z_data\"],\n",
+    "        )\n",
+    "    )"
    ]
   },
   {
@@ -252,7 +510,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt.total_seconds() / 60 / 60"
+    "a = np.vstack(data)\n",
+    "a.shape"
    ]
   },
   {
@@ -261,16 +520,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "md[\"acquisition_times\"][-100:] / (60 * 1000) / 60  # / (1000*60)#*60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "files[0].size / 10**12"
+    "data[0][0].info"
    ]
   },
   {
