--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -1,3 +1,6 @@
+rough hough with binarized image, then blur and intensity hough
+
+
 fix rotation: blur, do intensity hough, try edge-filtering first
 blur trench profile, set minimum trench spacing
 
