WIP on trench segmentation, mainly uniformizing and normalizing.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180328.2 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180328.2 Prototyping.ipynb
@@ -1511,7 +1511,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Trench sharpness"
    ]
@@ -1519,7 +1521,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def f(img_stack):\n",
@@ -1540,7 +1544,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def f(img_stack):\n",
@@ -1576,7 +1582,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%%output size=250\n",
@@ -1604,7 +1612,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "pos = 7\n",
@@ -1631,9 +1641,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pos = 0\n",
-    "trench_idx = 60\n",
+    "pos = 6\n",
     "trench_set_idx = 2\n",
+    "trench_idx = 54\n",
     "trench_points = trench_points_pos[pos]"
    ]
   },
@@ -1667,8 +1677,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calibrate():\n",
-    "    pass"
+    "def uniformize_trench_intensity(img):\n",
+    "    # 0.2 exponent: don't distinguish between medium and high stddev, but distinguish between zero and medium\n",
+    "    std = img.std(axis=-1) ** 0.2\n",
+    "    return img * (std / std.max() / img.mean(axis=-1))[..., :, np.newaxis]"
    ]
   },
   {
@@ -1677,7 +1689,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(thumbs[10].T)"
+    "def normalize_trench_intensity(img):\n",
+    "    # 0.2 exponent: don't distinguish between medium and high stddev, but distinguish between zero and medium\n",
+    "    std = img.std(axis=-1) ** 0.2\n",
+    "    normalization = (img.max(axis=-1) * (std / std.sum())).sum()\n",
+    "    return img / normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimize_mask_threshold(\n",
+    "    img, min=0.8, max=0.98, num_thresholds=20, diagnostics=None\n",
+    "):\n",
+    "    min_threshold = np.percentile(img, min * 100)\n",
+    "    max_threshold = np.percentile(img, max * 100)\n",
+    "    thresholds = np.linspace(min_threshold, max_threshold, num_thresholds)\n",
+    "    metrics = []\n",
+    "    masks = {}\n",
+    "    for threshold in thresholds:\n",
+    "        mask = img > threshold\n",
+    "        if diagnostics is not None:\n",
+    "            masks[threshold] = mask\n",
+    "        regionprops = skimage.measure.regionprops(skimage.morphology.label(mask))\n",
+    "        metric = np.std([region.area for region in regionprops])\n",
+    "        metrics.append(metric)\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"masks\"] = hv.HoloMap({t: RevImage(m) for t, m in masks.items()})\n",
+    "        diagnostics[\"metric\"] = hv.Curve((thresholds, metrics))\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thumbs_u = normalize_trench_intensity(uniformize_trench_intensity(thumbs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd = {}\n",
+    "optimize_mask_threshold(thumbs_u[10], diagnostics=dd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd[\"masks\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd[\"metric\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(res0.std(axis=1) / res0.std(axis=1).max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res0 = thumbs[10]\n",
+    "res_std = res0.std(axis=-1) ** 0.2\n",
+    "res = res0 * (res_std / res_std.max() / res0.mean(axis=-1))[:, np.newaxis]\n",
+    "plt.figure(figsize=(16, 16))\n",
+    "plt.imshow(res.T)"
    ]
   },
   {
@@ -1687,7 +1789,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "res0 = thumbs[90]\n",
+    "res0 = thumbs[10]\n",
     "low = np.percentile(res0, 80)\n",
     "high = np.percentile(res0, 98)\n",
     "thresholds = np.linspace(low, high, 20)\n",
