WIP first cut of trench segmentation diagnostics.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180328.2 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180328.2 Prototyping.ipynb
@@ -1630,7 +1630,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Segmentation"
    ]
@@ -1638,7 +1640,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "pos = 6\n",
@@ -1650,7 +1654,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
@@ -1661,7 +1667,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "thumbs_k1 = map_ndarray(lambda img: hessian_eigenvalues(img)[0], thumbs)\n",
@@ -1674,7 +1682,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def uniformize_trench_intensity(img):\n",
@@ -1686,7 +1696,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def normalize_trench_intensity(img):\n",
@@ -1699,7 +1711,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def optimize_mask_threshold(\n",
@@ -1726,7 +1740,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "thumbs_u = normalize_trench_intensity(uniformize_trench_intensity(thumbs))"
@@ -1735,7 +1751,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "dd = {}\n",
@@ -1745,7 +1763,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "dd[\"masks\"]"
@@ -1754,7 +1774,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "dd[\"metric\"]"
@@ -1763,7 +1785,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "plt.plot(res0.std(axis=1) / res0.std(axis=1).max())"
@@ -1772,7 +1796,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "res0 = thumbs[10]\n",
@@ -1785,7 +1811,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1812,7 +1840,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "plt.plot(metrics)\n",
@@ -1822,7 +1852,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "plt.plot(np.cumsum(metrics) / np.sum(metrics))\n",
@@ -1832,7 +1864,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "res.max()"
@@ -1841,7 +1875,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "img = thumbs[80]\n",
@@ -1875,7 +1911,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "np.percentile(img_k2, 90)"
@@ -1884,7 +1922,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def segment_trench(img, rel_threshold=None, threshold=None):\n",
@@ -1921,7 +1961,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "len(trench_points[1][0])"
@@ -1930,7 +1972,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1941,7 +1985,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "segs[5]"
@@ -1950,7 +1996,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "plt.imshow(segs[5])"
@@ -1959,7 +2007,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "a = skimage.measure.regionprops(segs[2])"
@@ -1968,7 +2018,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "b = a[1]"
@@ -1977,7 +2029,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "b.area"
@@ -1986,7 +2040,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "[b.area for b in a]"
@@ -1995,7 +2051,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "[np.std([region.area for region in skimage.measure.regionprops(seg)]) for seg in segs]"
@@ -2004,7 +2062,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "hv.HoloMap({k: hv.Image(v) for k, v in zip(thresholds, segs)})"
@@ -2013,7 +2073,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "plt.figure(figsize=(20, 20))\n",
@@ -2183,6 +2245,225 @@
     "RevImage(thumbs[0]) * hv.Points([x0 - ul, x1 - ul]).opts(\n",
     "    plot={\"size\": 30, \"color\": \"green\"}\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trench segmentation 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pos = 6\n",
+    "trench_set_idx = 2\n",
+    "trench_idx = 54\n",
+    "trench_points = trench_points_pos[pos]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
+    "ul, lr = get_trench_bbox(trench_points[trench_set_idx], trench_idx, x_lim, y_lim)\n",
+    "thumbs = root_group[\"raw\"][pos][1, :, ul[1] : lr[1], ul[0] : lr[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def optimize_segmentation_threshold(segmentations, diagnostics=None):\n",
+    "    thresholds = []\n",
+    "    metrics = []\n",
+    "    for threshold, segmentation in segmentations.items():\n",
+    "        regionprops = skimage.measure.regionprops(segmentation)\n",
+    "        metric = np.std([region.area for region in regionprops])\n",
+    "        thresholds.append(threshold)\n",
+    "        metrics.append(metric)\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"segmentations\"] = hv.HoloMap(\n",
+    "            {t: RevImage(seg) for t, seg in segmentations.items()}\n",
+    "        )\n",
+    "        diagnostics[\"metric\"] = hv.Curve((thresholds, metrics))\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def segment_trench(img, threshold, diagnostics=None):\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"img\"] = RevImage(img)\n",
+    "    img = normalize_trench_intensity(uniformize_trench_intensity(img))\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"img_normalized\"] = RevImage(img)\n",
+    "    img_scaled = skimage.transform.pyramid_expand(img, upscale=2, multichannel=False)\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"img_scaled\"] = RevImage(img_scaled)\n",
+    "    img_k2 = hessian_eigenvalues(img_scaled)[0]\n",
+    "    # img_k2 = normalize_trench_intensity(uniformize_trench_intensity(img_k2))\n",
+    "    # img_k2 = repeat_apply(skimage.morphology.dilation, 1)(img_k2)\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"img_k2\"] = RevImage(img_k2)\n",
+    "    img_k2 = skimage.filters.gaussian(img_k2, 3)\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"img_k2_blurred\"] = RevImage(img_k2)\n",
+    "    img_k2 = skimage.transform.rescale(img_k2, 3)\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"img_k2_rescaled\"] = RevImage(img_k2)\n",
+    "    bin_img = img_k2 > threshold\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"bin_img\"] = RevImage(bin_img)\n",
+    "    labeled_img = skimage.morphology.label(1 - bin_img)\n",
+    "    bg_label = scipy.stats.mode(labeled_img.flat).mode[0]\n",
+    "    all_labels = (labeled_img * (labeled_img != bg_label)) != 0\n",
+    "    distances = scipy.ndimage.distance_transform_edt(all_labels)\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"distances\"] = RevImage(distances)\n",
+    "    # res = skimage.feature.peak_local_max(distance_transform, indices=False, footprint=np.ones((3, 3)), labels=labeled_img)\n",
+    "    # res2 = skimage.feature.peak_local_max(distance_transform, indices=False, min_distance=20)\n",
+    "    # res6 = skimage.morphology.watershed(img_k2, labeled_img)\n",
+    "    # res6 = skimage.morphology.watershed(img_k2, skimage.morphology.label(res2))\n",
+    "    eroded_distances = repeat_apply(skimage.morphology.erosion, 10)(distances)\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"eroded_distances\"] = RevImage(eroded_distances)\n",
+    "    labeled_distances = skimage.morphology.label(\n",
+    "        eroded_distances != 0 + (labeled_img == bg_label)\n",
+    "    )\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"labeled_distances\"] = RevImage(labeled_distances)\n",
+    "    bg_label2 = scipy.stats.mode(labeled_distances.flat).mode[0]\n",
+    "    labeled_distances_clean = skimage.morphology.remove_small_objects(\n",
+    "        labeled_distances, 20\n",
+    "    )\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"labeled_distances_clean\"] = RevImage(labeled_distances_clean)\n",
+    "    watershed_labels = skimage.morphology.watershed(img_k2, labeled_distances_clean)\n",
+    "    watershed_labels[watershed_labels == bg_label2] = 0  # set background to 0\n",
+    "    # watershed_labels_rescaled = skimage.transform.rescale(watershed_labels, 1/6, anti_aliasing=False)\n",
+    "    if diagnostics is not None:\n",
+    "        diagnostics[\"watershed_labels\"] = RevImage(watershed_labels)\n",
+    "    return watershed_labels  # _rescaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag_seg = tree()\n",
+    "seg = segment_trench(thumbs[50], 0.015, diagnostics=diag_seg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_plot_browser(diag_seg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag_seg[\"bin_img\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[s.max() for s in segs.values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "segs = {\n",
+    "    thresh: segment_trench(thumbs[50], threshold=thresh)\n",
+    "    for thresh in np.linspace(0.01, 0.02, 20)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd = {}\n",
+    "optimize_segmentation_threshold(segs, diagnostics=dd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd[\"metric\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[len(tp[1][1]) for tp in trench_points_pos.values()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dd[\"segmentations\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res0 = thumbs[50]\n",
+    "res1 = normalize_trench_intensity(uniformize_trench_intensity(res0))\n",
+    "res = segment_trench(res0, 0.014)\n",
+    "plt.figure(figsize=(16, 16))\n",
+    "plt.imshow(res.T)\n",
+    "plt.show()\n",
+    "plt.figure(figsize=(16, 16))\n",
+    "plt.imshow(res0.T)\n",
+    "plt.show()\n",
+    "plt.figure(figsize=(16, 16))\n",
+    "plt.imshow(res1.T)"
    ]
   },
   {
