Whoops, forgot this.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180328.2 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180328.2 Prototyping.ipynb
@@ -2283,6 +2283,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def uniformize_trench_intensity(img):\n",
+    "    # 0.2 exponent: don't distinguish between medium and high stddev, but distinguish between zero and medium\n",
+    "    std = img.std(axis=-1) ** 0.2\n",
+    "    return img * (std / std.max() / img.mean(axis=-1))[..., :, np.newaxis]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_trench_intensity(img):\n",
+    "    # 0.2 exponent: don't distinguish between medium and high stddev, but distinguish between zero and medium\n",
+    "    std = img.std(axis=-1) ** 0.2\n",
+    "    normalization = (img.max(axis=-1) * (std / std.sum())).sum()\n",
+    "    return img / normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def optimize_segmentation_threshold(segmentations, diagnostics=None):\n",
     "    thresholds = []\n",
     "    metrics = []\n",
@@ -2366,6 +2391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "diag_seg = tree()\n",
     "seg = segment_trench(thumbs[50], 0.015, diagnostics=diag_seg)"
    ]
