Watershed trench segmentation was calculating distance transform, doing a bunch of other things that make no sense. Fixed. Works decently but not perfectly.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180329.2 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180329.2 Prototyping.ipynb
@@ -1675,6 +1675,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "t = 71\n",
+    "segment_trench(thumbs[t], diagnostics=diag_seg_pos[t])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hv.HoloMap({t: RevImage(seg.T) for t, seg in enumerate(segs)})"
    ]
   },
