--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180329.2 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180329.2 Prototyping.ipynb
@@ -208,6 +208,29 @@
    },
    "outputs": [],
    "source": [
+    "diag = tree()\n",
+    "_ = get_trenches(root_group[\"raw\"][str(pos)][0, 1], diagnostics=diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "display_plot_browser(diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
     "diag_pos[0][\"label_1\"][\"trench_ends\"].keys()"
    ]
   },
@@ -273,87 +296,7 @@
    },
    "outputs": [],
    "source": [
-    "plt.imshow(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "bin_img = img > skimage.filters.threshold_otsu(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.imshow(bin_img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "bin_img2 = skimage.morphology.skeletonize(bin_img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(20, 20))\n",
-    "plt.imshow(bin_img2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "h, theta, d = skimage.transform.hough_line(bin_img2, theta=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.imshow(h, aspect=0.01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "display_plot_browser(diag_pos[pos])"
+    "display_plot_browser(diag_pos[0])"
    ]
   },
   {
@@ -1612,9 +1555,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Debugging"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# pos, trench_set_idx, trench_idx = 6, 2, 54\n",
@@ -1625,7 +1579,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "x_lim, y_lim = get_img_limits(root_group[\"raw\"][pos].shape[2:])\n",
@@ -1636,7 +1592,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def optimize_segmentation_threshold(segmentations, diagnostics=None):\n",
@@ -1658,7 +1616,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
@@ -1672,7 +1632,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "t = 71\n",
@@ -1682,7 +1644,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "hv.HoloMap({t: RevImage(seg.T) for t, seg in enumerate(segs)})"
@@ -1691,10 +1655,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "display_plot_browser(diag_seg_pos[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Full analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_plot_browser(diag_seg_pos[71])"
+    "segs = [\n",
+    "    segment_trench(thumbs[t], diagnostics=diag_seg_pos[t])\n",
+    "    for t in range(thumbs.shape[0])\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def f(img_stack):\n",
+    "    return pd.Series(np.percentile(img_stack, 95, axis=(1, 2)))\n",
+    "\n",
+    "\n",
+    "trench_traces_all = positionwise_trenchwise_map(\n",
+    "    root_group[\"raw\"],\n",
+    "    trench_points_pos,\n",
+    "    f,\n",
+    "    channel_slice=1,\n",
+    "    preload=True,\n",
+    "    time_slice=slice(10),\n",
+    "    positions=range(1),\n",
+    ")"
    ]
   },
   {
@@ -1711,13 +1711,71 @@
    "outputs": [],
    "source": [
     "def f(img_stack):\n",
-    "    return pd.Series(np.percentile(img_stack, 90, axis=(1, 2)))\n",
+    "    return pd.Series([0])  # pd.Series(np.percentile(img_stack, 90, axis=(1,2)))\n",
     "\n",
     "\n",
     "pos = 0\n",
-    "trench_traces = trenchwise_map(\n",
-    "    root_group[\"raw\"][pos], trench_points_pos[pos], f, channel_slice=2\n",
+    "trench_traces2 = trenchwise_map(\n",
+    "    root_group[\"raw\"][pos],\n",
+    "    trench_points_pos[pos],\n",
+    "    f,\n",
+    "    channel_slice=2,\n",
+    "    time_slice=slice(50),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_traces2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_collections(partial(pd.concat, axis=1), trench_traces2, max_level=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat({k: pd.concat(v, axis=1) for k, v in trench_traces2.items()}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recursive_map(lambda x: pd.concat(x, axis=1), trench_traces2, shortcircuit=pd.Series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat(trench_traces2, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_traces"
    ]
   },
   {
